# analyseur-de-fiche-de-paie

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
back/src/: main.rs
src/: app.rs  components.rs  event.rs  main.rs  views.rs
src/app/: analyse.rs  database.rs  events.rs  paystubs.rs  store.rs
src/components/: graph.rs  menu.rs  paystubs.rs  settings.rs
